2023-09-01T16:22:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6051754564 # 752
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 227 484 / 234 493
* notice: next accum: outdated-unq outdated-all / unq all: 227 484 / 234 494
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-01]

2023-09-01T01:20:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6044247566 # 750
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 227 484 / 233 491
* notice: next accum: outdated-unq outdated-all / unq all: 227 484 / 234 493
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-18 2023-08-31 2023-09-01]

2023-08-31T16:23:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6039926635 # 749
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-31
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 226 482 / 233 491
* notice: next accum: outdated-unq outdated-all / unq all: 227 484 / 233 491
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-17] / []

2023-08-31T08:22:33Z: