@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-01T16:22:54Z",
-  "count_outdated" : 484,
-  "uniques_outdated" : 227,
-  "count" : 494,
-  "uniques" : 234,
+  "timestamp" : "2023-09-02T01:13:11Z",
+  "count_outdated" : 486,
+  "uniques_outdated" : 229,
+  "count" : 495,
+  "uniques" : 235,
   "clones" : [
-    {
-      "timestamp": "2023-08-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-08-28T00:00:00Z",
       "count": 1,
@@ -55,6 +46,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
