@@ -1,12 +1,7 @@
 {
   "count": 9,
-  "uniques": 2,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2023-08-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-28T00:00:00Z",
       "count": 1,
@@ -30,6 +25,11 @@
     {
       "timestamp": "2023-09-01T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-02T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
