@@ -1,3 +1,12 @@
+2023-09-02T01:13:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6055460689 # 753
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-02
+* notice: last 14d: unq all: 1 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 227 484 / 234 494
+* notice: next accum: outdated-unq outdated-all / unq all: 229 486 / 235 495
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-08-18] / [2023-09-02]
+
 2023-09-01T16:22:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6051754564 # 752
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
